--- a/Week-3/my-app-2/src/ReadMe
+++ b/Week-3/my-app-2/src/ReadMe
@@ -1,4 +1,4 @@
-READ ME
+ READ ME
 
 
 (files description)
@@ -6,3 +6,7 @@ App.js
 Header.js
 Content.js passed to TodoListItems.js passed to LineItems.js
 footer.js
+
+
+Component TodoList (TodoList.js) is Commented out and not used (Was used for Wk-1 )
+
